# Examples

./: .clang-format  .gitignore
algorithms/sort/: CMakeLists.txt
algorithms/sort/basic_sort/: CMakeLists.txt
algorithms/sort/basic_sort/algorithm/: quick_sort.cpp  three_way_quick_sort.cpp
algorithms/sort/big_file_merge_sort/: CMakeLists.txt
algorithms/sort/big_file_merge_sort/app/: big_file_merge_sort.cpp
algorithms/sort/big_file_merge_sort/source/: read_file_in_segments.cpp  read_file_in_segments.h
cpp/backup/basic/ODR/inline_in_cpp/: display_a.cpp  display_b.cpp  inline.h  main.cpp
cpp/backup/basic/ODR/local_function/: add.cpp  local_function.h  main.cpp  sub.cpp
cpp/backup/basic/ODR/tentatively_definition/: main.cpp  tentatively_definition.cpp  tentatively_definition.h
cpp/backup/basic/pointer/const_pointer_assignment/: main.cpp
cpp/backup/basic/sizeof/: main.cpp
cpp/backup/basic/struct/initialization/: main.cpp
cpp/backup/oop/inheritance/delete_constructor/: add.cpp  add.h  calculate.h  (+1 more)
cpp/backup/stl/memory_consume/: main.cpp  memory_test_container.cpp  memory_test_container.h  set_memory.h  unordered_map_memory.h  unordered_set_memory.h  vector_memory.h
cpp/backup/template/explicit_instantiation/: add.cpp  add.h  main.cpp  util.cpp
io/: CMakeLists.txt
io/app/: generate_example_file.cpp  read_file_in_segments.cpp
math/quick_multiplier/: quick_multiplier.cpp
sort/basic_sort/app/: verify_correctness.cpp
sort/big_file_merge_sort/: CMakeLists.txt  big_file_merge_sort.cpp
sort/big_file_merge_sort/app/: big_file_merge_sort.cpp
(+23 files in other folders)
